--- a/src/index.wxml
+++ b/src/index.wxml
@@ -1,6 +1,6 @@
 <slot name="inputs"></slot>
 
-<view class="error-message" wx:if="{{ errorMessage }}">{{ errorMessage }}</view>
+<view class="vest-form-input__error-message" wx:if="{{ errorMessage }}">{{ errorMessage }}</view>
 
 <view class="weui-btn-area" wx:if="{{ showButtons }}">
   <slot name="buttons"></slot>
