--- a/src/inputs/boolean/boolean.wxml
+++ b/src/inputs/boolean/boolean.wxml
@@ -13,6 +13,6 @@
   </view>
 </view>
 
-<view class="input-error" wx:if="{{ error && error.message }}">
+<view class="vest-form-input__error" wx:if="{{ error && error.message }}">
   {{ error.message }}
 </view>
