--- a/src/inputs/select/select.wxml
+++ b/src/inputs/select/select.wxml
@@ -4,7 +4,7 @@
   </view>
   <view class="weui-cell__bd">
     <block wx:if="{{ readonly }}">
-      <view class="readonly-input" wx:if="{{ range[index] }}">{{ range[index]['name'] }}</view>
+      <view class="vest-form-input__readonly" wx:if="{{ range[index] }}">{{ range[index]['name'] }}</view>
     </block>
     <block wx:else>
       <picker range="{{ range }}" value="{{ index }}" range-key="name"
@@ -18,6 +18,6 @@
   </view>
 </view>
 
-<view class="input-error" wx:if="{{ error && error.message }}">
+<view class="vest-form-input__error" wx:if="{{ error && error.message }}">
   {{ error.message }}
 </view>
