--- a/src/inputs/text/text.wxml
+++ b/src/inputs/text/text.wxml
@@ -8,6 +8,6 @@
     maxlength="-1" bindinput="onInput" />
 </view>
 
-<view class="input-error" wx:if="{{ error && error.message }}">
+<view class="vest-form-input__error" wx:if="{{ error && error.message }}">
   {{ error.message }}
 </view>
