--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -47,7 +47,7 @@
 
 vest-form {
   button, .button, vest-form-button {
-    margin: 0 0 20rpx 0;
+    margin-bottom: 20rpx;
 
     &:last-child {
       margin-bottom: 0;
