--- a/src/inputs/select/select.wxml
+++ b/src/inputs/select/select.wxml
@@ -9,11 +9,14 @@
     <block wx:else>
       <picker range="{{ range }}" value="{{ index }}" range-key="name"
         disabled="{{ disabled }}" bindchange="onChange">
-        <view class="weui-select weui-select_in-select-after">
+        <view class="weui-select weui-select_in-select-after{{ clearable && !!value ? ' clearable' : '' }}">
           <view wx:if="{{ range[index] }}">{{ range[index]['name'] }}</view>
           <view class="input-placeholder" wx:else>{{ placeholder }}</view>
         </view>
       </picker>
+      <view class="clear-input" bind:tap="reset" wx:if="{{ clearable && !!value }}">
+        <image src="@/assets/icons/cross-grey.svg" class="clear-icon" />
+      </view>
     </block>
   </view>
 </view>
