--- a/src/inputs/time/time.wxml
+++ b/src/inputs/time/time.wxml
@@ -10,11 +10,14 @@
       <picker mode="multiSelector" range="{{ range }}" value="{{ index }}"
         disabled="{{ disabled || readonly }}"
         bindchange="onChange" bindcolumnchange="onColumnChange">
-        <view class="weui-select weui-select_in-select-after">
+        <view class="weui-select weui-select_in-select-after{{ clearable && !!value ? ' clearable' : '' }}">
           <view wx:if="{{ displayValue }}">{{ displayValue }}</view>
           <view class="input-placeholder" wx:else>{{ placeholder }}</view>
         </view>
       </picker>
+      <view class="clear-input" bind:tap="reset" wx:if="{{ clearable && !!value }}">
+        <image src="@/assets/icons/cross-grey.svg" class="clear-icon" />
+      </view>
     </block>
   </view>
 </view>
