--- a/demo/src/pages/index/index.wxml
+++ b/demo/src/pages/index/index.wxml
@@ -11,7 +11,7 @@
       <vest-form-time-input name="birthdayTime" class="vest-form-input" label="生日时间" clearable="{{ false }}"></vest-form-time-input>
       <vest-form-number-input name="age" class="vest-form-input" label="年龄" suffix="岁"></vest-form-number-input>
       <vest-form-select-input name="favoriteColor" class="vest-form-input" label="喜欢的颜色" collection="{{ ['red', 'yellow', 'blue'] }}" value="red"></vest-form-select-input>
-      <vest-form-text-input name="comment" class="vest-form-input" label="备注" placeholder="随便写"></vest-form-text-input>
+      <vest-form-text-input name="comment" class="vest-form-input" label="备注" placeholder="随便写" auto-height focus="{{ true }}"></vest-form-text-input>
     </vest-form-fieldset>
   </view>
   <view slot="buttons">
